@@ -1,3 +1,6 @@
+September 10, 2012
+ - Fixed issue #66: column auto-resize makes not aware of StaticText
+
  - Bug fix: Functions GetLastVisible and GetLastVisibleNoInit return correct results even if some anchestor of the last visible node is not effectively visible
  - Improvement: Added functions GetNextSiblingNoInit and GetPreviousSiblingNoInit
 March 2012
